# testaris

./: .gitignore  Cargo.toml  build.sh  build_all.sh  build_worker.sh  emcc_linker  http.sh
src/: app.rs  events.rs  main.rs
tetris_core/: Cargo.toml  emcc_worker
tetris_core/src/: lib.rs  main.rs
tetris_core/tetris_struct/: Cargo.toml
tetris_struct/: Cargo.toml
tetris_struct/src/: lib.rs
tetris_worker/: Cargo.toml  emcc_worker
tetris_worker/.cargo/: config
tetris_worker/src/: main.rs
