[package]
name = "tetris"
version = "0.1.0"
authors = ["freestrings <freestrings@gmail.com>"]

[dependencies]
libc = "0.2"
lazy_static = "0.2"
rand = "0.3"
serde_json = "1.0"
serde_derive = "1.0"
sdl2 = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
emscripten-sys = "0.3"

[dependencies.tetris_struct]
path = "./tetris_struct"